<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:background="@drawable/item_galeria_borde" >

	<ImageView
	    android:id="@+id/imagenGaleria"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:adjustViewBounds="true"
	    android:src="@drawable/no_image"
	    android:contentDescription="@string/imagen_articulo" />
	
	<LinearLayout
	    style="@style/item_vista_galeria"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/imagenGaleria"
	    android:layout_alignParentLeft="true"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/precio_articulo_galeria"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/precio"
	        android:textSize="18sp"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/nombre_articulo_galeria"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/nombre" />

	</LinearLayout>
	
</RelativeLayout>