<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    
    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/homeSearch"
                style="@style/EditTextRedtabletAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:drawableRight="@drawable/abc_ic_search_api_holo_light"
                android:ems="10"
                android:hint="@string/hintSearch"
                android:textColorHint="@color/red_corporative"
                android:textColorLink="@color/red_corporative" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/ButtonRedtabletAppTheme"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/blanco"
        		android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/btnBuscar" />

        </LinearLayout>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnMotor"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_motor"
                        android:onClick="onButtonClick"
                        android:text="@string/btnMotor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnInmo"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_inmobiliaria"
                         android:onClick="onButtonClick"
                        android:text="@string/btnInmo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnEmpleo"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_empleo"
                         android:onClick="onButtonClick"
                        android:text="@string/btnEmpleo" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnLibros"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_libros"
                         android:onClick="onButtonClick"
                        android:text="@string/btnLibros" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnServicios"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_servicios"
                         android:onClick="onButtonClick"
                        android:text="@string/btnServicios" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnNegocios"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_negocios"
                         android:onClick="onButtonClick"
                        android:text="@string/btnNegocios" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnInformatica"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_informatica"
                         android:onClick="onButtonClick"
                        android:text="@string/btnInformatica" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnSonido"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_imagen"
                        android:onClick="onButtonClick"
                        android:text="@string/btnSonido" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnTelefonia"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_telefonia"
                        android:onClick="onButtonClick"
                        android:text="@string/btnTelefonia" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnJuegos"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_juegos"
                        android:onClick="onButtonClick"
                        android:text="@string/btnJuegos" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnHogar"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_hogar"
                        android:onClick="onButtonClick"
                        android:text="@string/btnHogar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnModa"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_moda"
                        android:onClick="onButtonClick"
                        android:text="@string/btnModa" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnContactos"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_contactos"
                        android:onClick="onButtonClick"
                        android:text="@string/btnContactos" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnOcio"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_ocio"
                        android:onClick="onButtonClick"
                        android:text="@string/btnOcio" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnDeportes"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_deportes"
                        android:onClick="onButtonClick"
                        android:text="@string/btnDeportes" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >
     
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnMascotas"
                        style="@style/dashboard_button"
                        android:drawableTop="@drawable/ic_mascotas"
                        android:onClick="onButtonClick"
                        android:text="@string/btnMascotas" />
                </LinearLayout>
                
				<LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <android.support.v7.widget.Space
                    android:id="@+id/space1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    
                </LinearLayout>
              
              <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <android.support.v7.widget.Space
                    android:id="@+id/space2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    
                </LinearLayout>
                
            </TableRow>

        </TableLayout>
        
    </LinearLayout>

</ScrollView>