<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imagen_no_articulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TxtDetalle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:contentDescription="@string/des_imagen_no_resultados"
        android:src="@drawable/find" />

    <TextView
        android:id="@+id/TxtDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:text="@string/no_resultados" />

    <Button
        android:id="@+id/btn_nueva_busqueda"
        style="@style/ButtonRedtabletAppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:drawableLeft="@drawable/ic_action_search"
        android:drawablePadding="10dp"
        android:text="@string/boton_no_resultados"
        android:textColor="@color/blanco"
        android:textSize="16sp" />

</RelativeLayout>
