<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/search"
            style="@style/EditTextRedtabletAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/abc_ic_search_api_holo_light"
            android:ems="10"
            android:hint="@string/hintSearch"
            android:textColorHint="@color/red_corporative"
            android:textColorLink="@color/red_corporative" />

        <TableRow
            android:id="@+id/layout_campo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/lblCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                android:layout_weight="1" />
            
            <Spinner
                android:id="@+id/spinnerCategoria"
                style="@style/SpinnerRedtabletAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:listitem="@android:layout/simple_spinner_item" />

        </TableRow>

        <FrameLayout
        	android:id="@+id/campos_frame"
       	 	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
	    </FrameLayout>

        <Button
            android:id="@+id/btnBuscar"
            style="@style/ButtonRedtabletAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/btnBuscar"
            android:textColor="@color/blanco"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>